--- a/HomeYoutubeDemo/ChannelCell.xib
+++ b/HomeYoutubeDemo/ChannelCell.xib
@@ -22,18 +22,23 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jeJ-lv-fWB">
-                        <rect key="frame" x="90" y="12" width="42" height="21"/>
+                        <rect key="frame" x="90" y="12" width="204" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Kv-gL-OTO">
-                        <rect key="frame" x="345" y="20" width="58" height="30"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="Subscribe"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Kv-gL-OTO">
+                        <rect key="frame" x="294" y="20" width="109" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="4Kv-gL-OTO" secondAttribute="height" multiplier="109:30" id="WBa-B2-dOe"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                        <state key="normal" title="Subscribe">
+                            <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qcN-sn-Fnp">
-                        <rect key="frame" x="90" y="38" width="42" height="21"/>
+                        <rect key="frame" x="90" y="38" width="204" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -46,10 +51,12 @@
                     <constraint firstAttribute="bottom" secondItem="vLu-o3-mWe" secondAttribute="bottom" constant="10" id="JCu-zc-Mj9"/>
                     <constraint firstAttribute="bottom" secondItem="4Kv-gL-OTO" secondAttribute="bottom" constant="20" id="SEO-cP-NJx"/>
                     <constraint firstItem="qcN-sn-Fnp" firstAttribute="leading" secondItem="vLu-o3-mWe" secondAttribute="trailing" constant="20" id="SO6-Bn-jkR"/>
+                    <constraint firstItem="4Kv-gL-OTO" firstAttribute="leading" secondItem="jeJ-lv-fWB" secondAttribute="trailing" id="TKG-Zz-RAC"/>
                     <constraint firstAttribute="trailing" secondItem="4Kv-gL-OTO" secondAttribute="trailing" constant="15" id="V9B-xX-qBs"/>
                     <constraint firstItem="vLu-o3-mWe" firstAttribute="leading" secondItem="kNo-03-72z" secondAttribute="leading" constant="20" id="Zsx-jO-eyo"/>
                     <constraint firstItem="jeJ-lv-fWB" firstAttribute="leading" secondItem="vLu-o3-mWe" secondAttribute="trailing" constant="20" id="ar7-tc-3v5"/>
-                    <constraint firstItem="4Kv-gL-OTO" firstAttribute="leading" secondItem="jeJ-lv-fWB" secondAttribute="trailing" constant="3" id="g0G-zc-MWZ"/>
+                    <constraint firstAttribute="bottom" secondItem="qcN-sn-Fnp" secondAttribute="bottom" constant="11" id="pgb-Ub-Qc9"/>
+                    <constraint firstItem="4Kv-gL-OTO" firstAttribute="leading" secondItem="qcN-sn-Fnp" secondAttribute="trailing" id="rm2-cj-5if"/>
                     <constraint firstItem="jeJ-lv-fWB" firstAttribute="top" secondItem="kNo-03-72z" secondAttribute="top" constant="12" id="vKh-MB-KVp"/>
                 </constraints>
             </tableViewCellContentView>
