--- a/HomeYoutubeDemo/SuggestVideoCell.xib
+++ b/HomeYoutubeDemo/SuggestVideoCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,25 +16,25 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XJt-o1-6tg">
-                        <rect key="frame" x="20" y="8" width="181.5" height="109"/>
+                        <rect key="frame" x="20" y="8" width="194" height="109"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="XJt-o1-6tg" secondAttribute="height" multiplier="15 : 9" id="x3v-eA-L2z"/>
+                            <constraint firstAttribute="width" secondItem="XJt-o1-6tg" secondAttribute="height" multiplier="16 : 9" id="x3v-eA-L2z"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyN-Fr-EQM">
-                        <rect key="frame" x="221.5" y="8" width="261.5" height="20.5"/>
+                        <rect key="frame" x="224" y="8" width="259" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6tW-rN-cch">
-                        <rect key="frame" x="221.5" y="36.5" width="261.5" height="19.5"/>
+                        <rect key="frame" x="224" y="33.5" width="259" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQL-kb-rmJ">
-                        <rect key="frame" x="221.5" y="64" width="261.5" height="19.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQL-kb-rmJ">
+                        <rect key="frame" x="224" y="58" width="259" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -45,14 +45,14 @@
                     <constraint firstItem="XJt-o1-6tg" firstAttribute="leading" secondItem="G9N-N5-DYJ" secondAttribute="leading" constant="20" id="Dfn-bH-7w3"/>
                     <constraint firstItem="jyN-Fr-EQM" firstAttribute="top" secondItem="G9N-N5-DYJ" secondAttribute="top" constant="8" id="EVu-O9-wNc"/>
                     <constraint firstAttribute="trailing" secondItem="hQL-kb-rmJ" secondAttribute="trailing" constant="20" id="EkI-TY-r4M"/>
-                    <constraint firstItem="hQL-kb-rmJ" firstAttribute="top" secondItem="6tW-rN-cch" secondAttribute="bottom" constant="8" id="KJj-da-tU3"/>
-                    <constraint firstItem="hQL-kb-rmJ" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="20" id="anG-3f-lpb"/>
+                    <constraint firstItem="hQL-kb-rmJ" firstAttribute="top" secondItem="6tW-rN-cch" secondAttribute="bottom" constant="5" id="KJj-da-tU3"/>
+                    <constraint firstItem="hQL-kb-rmJ" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="10" id="anG-3f-lpb"/>
                     <constraint firstAttribute="trailing" secondItem="jyN-Fr-EQM" secondAttribute="trailing" constant="20" id="hXY-Da-Ndc"/>
-                    <constraint firstItem="jyN-Fr-EQM" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="20" id="jYM-gW-Btc"/>
+                    <constraint firstItem="jyN-Fr-EQM" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="10" id="jYM-gW-Btc"/>
                     <constraint firstAttribute="trailing" secondItem="6tW-rN-cch" secondAttribute="trailing" constant="20" id="oTE-o5-gaT"/>
-                    <constraint firstItem="6tW-rN-cch" firstAttribute="top" secondItem="jyN-Fr-EQM" secondAttribute="bottom" constant="8" id="pQO-78-hiQ"/>
+                    <constraint firstItem="6tW-rN-cch" firstAttribute="top" secondItem="jyN-Fr-EQM" secondAttribute="bottom" constant="5" id="pQO-78-hiQ"/>
                     <constraint firstItem="XJt-o1-6tg" firstAttribute="top" secondItem="G9N-N5-DYJ" secondAttribute="top" constant="8" id="uZw-HN-e9Z"/>
-                    <constraint firstItem="6tW-rN-cch" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="20" id="yS2-T8-xJJ"/>
+                    <constraint firstItem="6tW-rN-cch" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="10" id="yS2-T8-xJJ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -61,7 +61,7 @@
                 <outlet property="thumbnailsImage" destination="XJt-o1-6tg" id="vpn-Jt-0kj"/>
                 <outlet property="titleLabel" destination="jyN-Fr-EQM" id="R1W-K6-vJl"/>
             </connections>
-            <point key="canvasLocation" x="-125" y="122"/>
+            <point key="canvasLocation" x="-125.36231884057972" y="121.54017857142857"/>
         </tableViewCell>
     </objects>
 </document>
