--- a/HomeYoutubeDemo/AllPlaylistCell.xib
+++ b/HomeYoutubeDemo/AllPlaylistCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,27 +22,32 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dW6-fb-y7z">
-                        <rect key="frame" x="132" y="69.5" width="38" height="18"/>
+                        <rect key="frame" x="130" y="69.5" width="38" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5g-ia-x0O">
-                        <rect key="frame" x="132" y="30" width="49" height="29.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                        <rect key="frame" x="130" y="28" width="47.5" height="33.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="haveVideoPlaylist" translatesAutoresizingMaskIntoConstraints="NO" id="b4H-bG-ft7">
+                        <rect key="frame" x="377" y="44" width="24" height="24"/>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="a5g-ia-x0O" firstAttribute="leading" secondItem="nWA-9S-U4L" secondAttribute="trailing" constant="20" id="2Da-sV-mIj"/>
+                    <constraint firstItem="a5g-ia-x0O" firstAttribute="leading" secondItem="nWA-9S-U4L" secondAttribute="trailing" constant="18" id="2Da-sV-mIj"/>
                     <constraint firstItem="nWA-9S-U4L" firstAttribute="top" secondItem="Joy-Tk-eMJ" secondAttribute="top" constant="10" id="2vJ-Ql-ETv"/>
-                    <constraint firstItem="dW6-fb-y7z" firstAttribute="leading" secondItem="nWA-9S-U4L" secondAttribute="trailing" constant="20" id="5xk-fD-NsF"/>
-                    <constraint firstItem="dW6-fb-y7z" firstAttribute="top" secondItem="a5g-ia-x0O" secondAttribute="bottom" constant="10" id="GEp-uX-uGm"/>
+                    <constraint firstItem="dW6-fb-y7z" firstAttribute="leading" secondItem="nWA-9S-U4L" secondAttribute="trailing" constant="18" id="5xk-fD-NsF"/>
+                    <constraint firstItem="dW6-fb-y7z" firstAttribute="top" secondItem="a5g-ia-x0O" secondAttribute="bottom" constant="8" id="GEp-uX-uGm"/>
+                    <constraint firstAttribute="trailing" secondItem="b4H-bG-ft7" secondAttribute="trailing" constant="20" id="N2W-Bf-f3L"/>
                     <constraint firstItem="nWA-9S-U4L" firstAttribute="leading" secondItem="Joy-Tk-eMJ" secondAttribute="leading" constant="20" id="NqF-Q7-h0T"/>
                     <constraint firstItem="a5g-ia-x0O" firstAttribute="centerY" secondItem="Joy-Tk-eMJ" secondAttribute="centerY" multiplier="8:10" id="POa-gh-fMv"/>
                     <constraint firstAttribute="bottom" secondItem="nWA-9S-U4L" secondAttribute="bottom" constant="10" id="SZe-0J-dMp"/>
-                    <constraint firstItem="a5g-ia-x0O" firstAttribute="top" secondItem="Joy-Tk-eMJ" secondAttribute="top" constant="30" id="uHM-Et-WZG"/>
+                    <constraint firstItem="b4H-bG-ft7" firstAttribute="centerY" secondItem="Joy-Tk-eMJ" secondAttribute="centerY" id="WHR-Wh-wVZ"/>
+                    <constraint firstItem="a5g-ia-x0O" firstAttribute="top" secondItem="Joy-Tk-eMJ" secondAttribute="top" constant="28" id="uHM-Et-WZG"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -53,4 +58,7 @@
             <point key="canvasLocation" x="45.652173913043484" y="229.6875"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="haveVideoPlaylist" width="24" height="24"/>
+    </resources>
 </document>
