--- a/HomeYoutubeDemo/SuggestVideoCell.xib
+++ b/HomeYoutubeDemo/SuggestVideoCell.xib
@@ -22,41 +22,55 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyN-Fr-EQM">
-                        <rect key="frame" x="224" y="8" width="259" height="20.5"/>
+                        <rect key="frame" x="224" y="8" width="241" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6tW-rN-cch">
-                        <rect key="frame" x="224" y="33.5" width="259" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="224" y="33.5" width="241" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQL-kb-rmJ">
-                        <rect key="frame" x="224" y="58" width="259" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="224" y="56.5" width="241" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34J-ht-EZU">
+                        <rect key="frame" x="470" y="8" width="25" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="34J-ht-EZU" secondAttribute="height" multiplier="5:6" id="WPc-9C-9Kc"/>
+                        </constraints>
+                        <state key="normal" image="more"/>
+                        <connections>
+                            <action selector="editVideoDidTap:" destination="1Wd-Rm-gSv" eventType="touchUpInside" id="qZb-R2-exI"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="hQL-kb-rmJ" firstAttribute="trailing" secondItem="6tW-rN-cch" secondAttribute="trailing" id="7er-Af-bPe"/>
                     <constraint firstAttribute="bottom" secondItem="XJt-o1-6tg" secondAttribute="bottom" constant="8" id="Bzv-Kt-7Vv"/>
                     <constraint firstItem="XJt-o1-6tg" firstAttribute="leading" secondItem="G9N-N5-DYJ" secondAttribute="leading" constant="20" id="Dfn-bH-7w3"/>
                     <constraint firstItem="jyN-Fr-EQM" firstAttribute="top" secondItem="G9N-N5-DYJ" secondAttribute="top" constant="8" id="EVu-O9-wNc"/>
-                    <constraint firstAttribute="trailing" secondItem="hQL-kb-rmJ" secondAttribute="trailing" constant="20" id="EkI-TY-r4M"/>
                     <constraint firstItem="hQL-kb-rmJ" firstAttribute="top" secondItem="6tW-rN-cch" secondAttribute="bottom" constant="5" id="KJj-da-tU3"/>
+                    <constraint firstAttribute="trailing" secondItem="34J-ht-EZU" secondAttribute="trailing" constant="8" id="M2g-PH-QfZ"/>
+                    <constraint firstItem="34J-ht-EZU" firstAttribute="leading" secondItem="jyN-Fr-EQM" secondAttribute="trailing" constant="5" id="Ske-wu-exs"/>
+                    <constraint firstItem="34J-ht-EZU" firstAttribute="height" secondItem="G9N-N5-DYJ" secondAttribute="height" multiplier="0.24" id="TeJ-lC-gdU"/>
                     <constraint firstItem="hQL-kb-rmJ" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="10" id="anG-3f-lpb"/>
-                    <constraint firstAttribute="trailing" secondItem="jyN-Fr-EQM" secondAttribute="trailing" constant="20" id="hXY-Da-Ndc"/>
                     <constraint firstItem="jyN-Fr-EQM" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="10" id="jYM-gW-Btc"/>
-                    <constraint firstAttribute="trailing" secondItem="6tW-rN-cch" secondAttribute="trailing" constant="20" id="oTE-o5-gaT"/>
                     <constraint firstItem="6tW-rN-cch" firstAttribute="top" secondItem="jyN-Fr-EQM" secondAttribute="bottom" constant="5" id="pQO-78-hiQ"/>
+                    <constraint firstItem="34J-ht-EZU" firstAttribute="top" secondItem="G9N-N5-DYJ" secondAttribute="top" constant="8" id="rnE-dj-sec"/>
+                    <constraint firstItem="6tW-rN-cch" firstAttribute="trailing" secondItem="jyN-Fr-EQM" secondAttribute="trailing" id="uQ1-Gz-QjQ"/>
                     <constraint firstItem="XJt-o1-6tg" firstAttribute="top" secondItem="G9N-N5-DYJ" secondAttribute="top" constant="8" id="uZw-HN-e9Z"/>
                     <constraint firstItem="6tW-rN-cch" firstAttribute="leading" secondItem="XJt-o1-6tg" secondAttribute="trailing" constant="10" id="yS2-T8-xJJ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="channelTitleLabel" destination="6tW-rN-cch" id="KjK-Ah-D6A"/>
+                <outlet property="editVideoButton" destination="34J-ht-EZU" id="VhR-P6-thY"/>
                 <outlet property="publishedAtLabel" destination="hQL-kb-rmJ" id="A2Q-cG-h05"/>
                 <outlet property="thumbnailsImage" destination="XJt-o1-6tg" id="vpn-Jt-0kj"/>
                 <outlet property="titleLabel" destination="jyN-Fr-EQM" id="R1W-K6-vJl"/>
@@ -64,4 +78,7 @@
             <point key="canvasLocation" x="-125.36231884057972" y="121.54017857142857"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="more" width="24" height="24"/>
+    </resources>
 </document>
